--- a/autoarbs/src/index.css
+++ b/autoarbs/src/index.css
@@ -13,3 +13,23 @@ main {
 .height-full {
   flex-grow: 1;
 }
+
+.flex {
+  display: flex;
+}
+
+.justify-start {
+  justify-content: start;
+}
+
+.justify-end {
+  justify-content: end;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.space-between {
+  justify-content: space-between;
+}
